kyy-k8s-config/src/app/frontend/fe-admin/fe-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    aliyun.proxy.VIRTUAL_HOST: http://*/web/admin,https://*/web/admin,http://*/web/admin/*,https://*/web/admin/*
    aliyun.proxy.VIRTUAL_HOST_WEIGHT: "30"
    aliyun.routing.port_80: http://www.kaoyaya.com/web/admin/
    kompose.cmd: kompose-darwin-amd64 convert -f fe-admin.yaml
    kompose.version: 1.17.0 (70e82c92)

  labels:
    app: fe-admin
  name: fe-admin
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: fe-admin
